# scholar2html

./: .gitignore  README.md  pyproject.toml
.github/workflows/: update-citations.yml
config/: config.json
output/: ArqlkTUAAAAJ.bib  Bruno_Bianchi_scholar.html  Bruno_Bianchi_scholar.json  E6U3rCYAAAAJ.bib  E6U3rCYAAAAJ.html  E6U3rCYAAAAJ.json  Enzo_Ferrante_scholar.html  Enzo_Ferrante_scholar.json  I1V5uaMAAAAJ.bib  I1V5uaMAAAAJ.html  I1V5uaMAAAAJ.json  Jazmin_Vidal_Dominguez_scholar.html  Jazmin_Vidal_Dominguez_scholar.json  OucNeLgAAAAJ.bib  Pablo_Brusco_scholar.html  Pablo_Brusco_scholar.json  Pablo_Riera_bibtex.html  Pablo_Riera_bibtex.json  Pablo_Riera_scholar.html  Pablo_Riera_scholar.json  all.html  all.json  o5lqAukAAAAJ.bib
refs/: riera.bib
scholar2bibtex/: __init__.py
scholar2bibtex/scripts/: __init__.py  generate_citations.py
scholar2bibtex/utils/: __init__.py  downloader.py  renderer.py
